--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.3.0",
+    "antd": "^4.9.4",
     "axios": "^0.21.0",
     "dotenv": "^8.2.0",
     "moment": "^2.29.1",
     "react": "^17.0.1",
+    "react-autocomplete": "^1.8.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-html-parser": "^2.0.2",
